13-08-2004 :
 - general : implemented command completion and interactive help.

06-08-2004 :
 - wxbRestorePanel : now parsing '+' sent by the director when building
     tree.
 - wxbRestorePanel : implemented .backups client=xxx (2.1)
 - wxbRestorePanel : implemented the director modification showing
     jobid when a job is started.

28-07-2004 :
 - wxbRestorePanel : implemented restore before=<Date> parameter.

17-07-2004 :
 - wxbRestorePanel & wxbHistoryTextCtrl : Fixed unsigned comparisons.
 - wxbRestorePanel : Fixed problem when the newly created job is not
    at the end of the list.

16-07-2004 :
 - wxbRestorePanel : Fixed crash when an error occurs while querying
    restore list (reported by Dan Langille).

15-07-2004 :
 - wxbMainFrame : When an unexpected question is in this format 
    (***? (yes/mod/no):), a list is shown to choose one of these 
    possibilities.
 - wxbRestorePanel : Fixed crash when there is no backup available
     (fresh install) 
 - wxbHistoryTextCtrl : Created a new text control that keep an history
     of typed commands.

14-07-2004 :
 - wxbMainFrame : Fixed config file problem when changing the default
     configuration file (Linux)

03-07-2004 :
 - wxbConfigPanel : Fixed ?: operator cast problem with gcc 2.95.

25-06-2004 :
 - wxbRestorePanel : Fix file size truncated if >100mb.

14-06-2004 :
 - wxbConfigPanel : fixed tests

22-05-2004 :
 - wxbUtils : Created this class, containing general functions like
    WaitForEnd

21-05-2004 :
 - wxbRestorePanel : Added functions to get/set working status

17-05-2004 :
 - wxbRestorePanel : Implemented refresh buttons

15-05-2004 :
 - wxbRestorePanel : The user can now mark/unmark a range of files selected
     with shift-click or multiple files selected with ctl-click, by
     right-clicking or using buttons.
 - wxbRestorePanel : Added buttons to mark/unmark directories/files.
 - wxbRestorePanel : Added buttons to force to refresh the whole tree/list

14-05-2004 :